fixed scss file + left aligned event cards content

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -107,10 +107,6 @@ a {
     }
 }
 
-.cards_testimonial_wrapper {
-
-}
-
 .card_testimonial_wrapper {
     display: flex;
     flex-direction: row;
@@ -176,7 +172,6 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     gap: 35px;
 
     padding-block: 15px;
@@ -340,6 +335,7 @@ a {
                 align-items: center;
 
                 max-width: 100%;
+                }
             }
 
             .tocText {
@@ -363,11 +359,12 @@ a {
     border-radius: 10px;
 
     background-color: white;
+
+    .sub-research-img {
+        height: 225px;
+    }
 }
 
-.sub-research-img {
-    height: 225px;
-}
 
 .collapsed-div {
     display: none;
@@ -495,4 +492,3 @@ a {
 // * {
 //     border: 1px solid red;
 // }
-} // don't know why is needed
